--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "dbhide",
   "version": "1.0",
-  "description": "Hide Code",
+  "description": "Hide cells and code on a Databricks notebook",
   "icons": {
     "48": "logo.png"
   },
