--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["https://*.databricks.com/*"],
-      "js": ["content-script.js"],
+      "js": ["contentScript.js"],
       "run_at": "document_idle"
     }
   ],
